first functioning display

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<title>To Do List</title>
 	<link rel="stylesheet" href="style.css">
 	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
 	<form>
 		<h1>To Do List</h1>
 		<input type="text" id="userInput" placeholder=""><br>
 		<button type="button" onclick="addBullet()">Add</button>
 	</form>
+	<img class="quil" src="images/quil.png">
 
 	<ul id="listItem"></ul>
 
