--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1>To Do List</h1>
 		<input type="text" id="userInput" placeholder=""><br>
 		<button type="button" onclick="addBullet()">Add</button>
+		<button type="button" onclick="removeBullet()">Remove</button>
 	</form>
 	<img class="quil" src="images/quil.png">
 
